@@ -1,3 +1,4 @@
+* Manage deletable and writable state
 * Support e-mail template
 * Send e-mail via the server
 * Support PYSON comparison of date and datetime
